# nfl-learning-tool

./: .gitignore  README.md  pyproject.toml  scraper.py
.devcontainer/: devcontainer.json
src/data/: processor.py
src/models/: predict.py  train.py
src/utils/: elo.py
