[project]
name = "nfl-learning-tool"
version = "0.1.0"
description = "Scrape Pro-Football-Reference, build features, train models, predict weekly NFL scores."
authors = [{name="Project Pat", email="you@example.com"}]
requires-python = ">=3.9"

[project.dependencies]
pandas = "^2.1"
numpy = "^1.28"
requests = "^2.31"
beautifulsoup4 = "^4.12"
lxml = "^4.9"
scikit-learn = "^1.3"
xgboost = "^2.0"
joblib = "^1.3"
tqdm = "^4.66"
matplotlib = "^3.8"
python-dateutil = "^2.9"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
